@@ -1,5 +1,5 @@
 #
-__version__ = '1.5.0.dev1'
+__version__ = '1.5.dev6'
 
 class exception:
     class Error(Exception):
